# Little-CMS

./: .gitignore  CMakeLists.txt  README.md  lcms2.pc.in  快速参考.md
docs/: BUILD.md
scripts/: build-unified.sh
